# Divi-Wallet-Importer-for-Divi-Desktop-Application

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
divi_wallet_importer/: __init__.py  __main__.py  api.py  bip39.py  bip39_wordlist.py  cli.py  cli_mode.py  platform_utils.py  rpc.py  server.py
divi_wallet_importer/web/: index.html
