[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "divi-wallet-importer"
version = "2.0.0"
description = "Import your Divi Wallet Mobile seed phrase into Divi Desktop Application"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
divi-wallet-importer = "divi_wallet_importer.cli:main"

[tool.setuptools.packages.find]
include = ["divi_wallet_importer*"]

[tool.setuptools.package-data]
"divi_wallet_importer.web" = ["*.html"]
